--- a/css/estilo.css.css
+++ b/css/estilo.css.css
@@ -4,7 +4,7 @@
 
 @font-face{
 	font-family: 'FonteLogo';
-	src: url("../_fonts/bubblegum-sans-regular.otf");
+	src: url("../fonts/bubblegum-sans-regular.otf");
 }
 body{
 	font-family: Arial, sans-serif;
@@ -37,7 +37,7 @@ header#cabecalho img#icone{
 header#cabecalho{
 	border-bottom: 1px #606060 solid;
 	height: 150px;
-	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px
+	background: url("../imagens/glass-logo-peq.jpg") no-repeat 0px
 	 80px;
 }
 header#cabecalho h1{
